crates/carta/tests/snapshots/golden_writer__man__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l l l.
T{
A
T}@T{
B
T}@T{
C
T}@T{
D
T}
_
T{
T}@T{
T}@T{
.IP \(bu 2
.IP \(bu 2
T}@T{
ok
T}
.TE
