crates/carta/tests/snapshots/golden_writer__man__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
lw(3.9n) lw(9.7n).
T{
a
T}@T{
b
T}
_
T{
1
T}@T{
2
T}
.TE
