crates/carta/tests/snapshots/golden_writer__man__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
a
T}@T{
b
T}
T{
c
T}@T{
d
T}
.TE
