crates/carta/tests/snapshots/golden_writer__man__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.RS
.PP
.TS
tab(@);
l l.
T{
a
T}@T{
b
T}
_
T{
1
T}@T{
2
T}
.TE
.RE
