crates/carta/tests/snapshots/golden_writer__man__table__table-long-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
k
T}@T{
description
T}
_
T{
a
T}@T{
this cell holds a deliberately long run of text that cannot fit inside
one seventy\-two column line and therefore forces a layout decision
T}
.TE
