crates/carta/tests/snapshots/golden_writer__man__table__table-multiple-bodies.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
h1
T}@T{
h2
T}
_
T{
a1
T}@T{
a2
T}
T{
b1
T}@T{
b2
T}
.TE
