crates/carta/tests/snapshots/golden_writer__man__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
tall
T}@T{
a
T}
T{
T}@T{
b
T}
.TE
