crates/carta/tests/snapshots/golden_writer__man__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
The full caption text
.TS
tab(@);
l.
T{
h
T}
_
T{
v
T}
.TE
