crates/carta/tests/snapshots/golden_writer__man__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
h1
T}@T{
h2
T}
_
T{
a
T}@T{
b
T}
.TE
